src/test/resources/regressions/features/sequences/seq-literal-fail6.gobra
// Any copyright is dedicated to the Public Domain.
// http://creativecommons.org/publicdomain/zero/1.0/

package pkg

func foo() {
  // error: overlapping keys
  //:: ExpectedOutput(type_error)
  ghost s := seq[int] { 1:42, 12 }
}
